双六ゲーム問題を削除，微分の問題に差し替え

--- a/r00/Calculus.ipynb
+++ b/r00/Calculus.ipynb
@@ -241,7 +241,7 @@
     "# たくさん関数や数字を入力するのは大変なので，繰り返し(ループ)を使う\n",
     "import numpy as np\n",
     "\n",
-    "for d in np.arange(0, 2.1, 0.1):  # 0から2まで，0.1ずつ数字を増やしながら繰り返しを実行\n",
+    "for d in np.arange(0, 2, 0.1):  # 0から2まで，0.1ずつ数字を増やしながら繰り返しを実行\n",
     "    print(d)  # 増えて行く数字を表示する"
    ]
   },
@@ -253,7 +253,7 @@
    "source": [
     "# 台形を分割した長方形の高さを計算する(y = x+2)\n",
     "\n",
-    "for d in np.arange(0, 2.1, 0.1):\n",
+    "for d in np.arange(0, 2, 0.1):\n",
     "    y = d+2\n",
     "    print(y)  # 「たて」を表示"
    ]
@@ -266,8 +266,8 @@
    "source": [
     "# 台形を分割した長方形の面積を合計する\n",
     "z = 0  # 面積の合計を足して行く変数\n",
-    "for d in np.arange(0, 2.1, 0.1):\n",
-    "    y = d+2\n",
+    "for n in np.arange(0, 2, 0.1):\n",
+    "    y = n+2\n",
     "    z = z + a(0.1, y) # 面積を計算，合計に足す"
    ]
   },
@@ -288,8 +288,8 @@
    "source": [
     "# さらにたくさん分割する(10000分割)\n",
     "z = 0  # 面積の合計を足して行く変数\n",
-    "for d in np.arange(0, 2.0001, 0.0001):\n",
-    "    y = d+2\n",
+    "for n in np.arange(0, 2, 0.0001):\n",
+    "    y = n+2\n",
     "    z = z + a(0.0001, y) # 面積を計算，合計に足す"
    ]
   },
@@ -300,6 +300,46 @@
    "outputs": [],
    "source": [
     "z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 半径1の円の面積"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "x^2 + y^2 = r^2\n",
+    "$\n",
+    "\n",
+    "yの方程式にする(移項)\n",
+    "\n",
+    "$\n",
+    "y^2 = r^2 - x^2\n",
+    "$\n",
+    "\n",
+    "$\n",
+    "y = \\sqrt{r^2 - x^2}\n",
+    "$\n",
+    "\n",
+    "半径が1なので\n",
+    "\n",
+    "$\n",
+    "y = \\sqrt{1 - x^2}\n",
+    "$\n",
+    "\n",
+    "でyからxが求まる。\n",
+    "\n",
+    "x=0を円の左端にし，円のたての長さ(w)を求めたい。\n",
+    "\n",
+    "$\n",
+    "w = \\sqrt{1 - (x-1)^2}\n",
+    "$"
    ]
   },
   {
@@ -311,8 +351,8 @@
     "# 半径1の円の面積(10000分割)\n",
     "\n",
     "z = 0  # 面積の合計を足して行く変数\n",
-    "for d in np.arange(0, 2.0001, 0.0001):\n",
-    "    y = np.sqrt(1**2-(d-1)**2)*2\n",
+    "for x in np.arange(0, 2, 0.0001):\n",
+    "    y = np.sqrt(1-(x-1)**2)*2\n",
     "    z = z + a(0.0001, y) # 面積を計算，合計に足す"
    ]
   },
@@ -329,115 +369,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# すごろくゲーム問題"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# サイコロをふる\n",
-    "from random import randint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "randint(1, 6)  # サイコロを振って出た目を表示する"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 0  # Aさんが何マス進んだか(スタートは0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#  サイコロを振ってコマを進める\n",
-    "r = randint(1, 6)  # サイコロを振る\n",
-    "a = a + r   # 降った目の数だけコマを進める \n",
-    "a    # 進んだコマの数を表示する"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#  ゴールしたか(20コマ過ぎたか)を調べる\n",
-    "if a > 20:\n",
-    "    print(\"ゴール\")"
+    "# 微分は増減"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "何回も実行するのは面倒。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ゴールするまでコマを進める\n",
-    "a = 0  # Aさんが何マス進んだか(スタートは0)\n",
-    "\n",
-    "while a < 20:   # Aさんが進んだコマ数が20以下なら繰り返し\n",
-    "    r = randint(1, 6)  # サイコロを振る\n",
-    "    a = a + r   # 降った目の数だけコマを進める \n",
-    "    print(a) # 進んだコマの数を表示する"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# AさんとBさんがどちらが勝ったかを決める\n",
-    "a = 0   # Aさんが何マス進んだか(スタートは0)\n",
-    "b = 0   # Bさんが何マス進んだか(スタートは0)\n",
-    "\n",
-    "# Aさん，Bさんがともに進んだコマ数が20以下なら繰り返し\n",
-    "while a < 20 and b < 20:   \n",
-    "    ra = randint(1, 6)  # サイコロを振る(Aさん)\n",
-    "    a = a + ra   # 降った目の数だけコマを進める \n",
-    "\n",
-    "    rb = randint(1, 6)*2  # サイコロを振る(Bさん)\n",
-    "    b = b + rb   # 降った目の数だけコマを進める \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a, b"
+    "## 面積最大化問題"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "同じ手順を何度も繰り返したいので，関数を作る"
+    "長さ20cmのロープを使って長方形をつくる。このとき，たて/よこの長さをどのようにとれば長方形の面積が最大になるか。"
    ]
   },
   {
@@ -446,24 +392,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def which():\n",
-    "    # AさんとBさんがどちらが勝ったかを決める\n",
-    "    a = 0   # Aさんが何マス進んだか(スタートは0)\n",
-    "    b = 0   # Bさんが何マス進んだか(スタートは0)\n",
+    "# たての長さが決まっているとき，横の長さが決まる\n",
+    "# たて : 12 よこ : 8\n",
+    "# たての長さを決めれば面積が決まる\n",
     "\n",
-    "    # Aさん，Bさんがともに進んだコマ数が20以下なら繰り返し\n",
-    "    while a < 20 and b < 20:   \n",
-    "        ra = randint(1, 6)  # サイコロを振る(Aさん)\n",
-    "        a = a + ra   # 降った目の数だけコマを進める \n",
-    "\n",
-    "        rb = randint(1, 6)*2  # サイコロを振る(Bさん)\n",
-    "        b = b + rb   # 降った目の数だけコマを進める \n",
-    "\n",
-    "    if a >= 20:  # Aさんが勝ち\n",
-    "        return 1\n",
-    "    if b >= 20: # Bさんが勝ち\n",
-    "        return 2\n",
-    "    "
+    "h = 12     # たての長さ\n",
+    "w = 20-h # よこの長さ\n",
+    "h*w  # 面積"
    ]
   },
   {
@@ -472,14 +407,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "which()  # 1ならAさん、2ならBさんが勝ち"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "これを何度も繰り返したい。"
+    "# たての長さを与えて面積を計算する関数を作る(面倒なので)\n",
+    "def a(h):\n",
+    "    w = 20-h    # よこの長さ\n",
+    "    return h*w # 面積を返す"
    ]
   },
   {
@@ -488,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = which()   # 結果を変数で受け取る"
+    "a(8)  # たて : 8， よこ 12"
    ]
   },
   {
@@ -497,12 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 結果によって振り分ける\n",
-    "\n",
-    "if w == 1:  # Aさんの勝ち\n",
-    "    print('Aさんの勝ち')\n",
-    "if w == 2:  # Bさんの勝ち\n",
-    "    print('Bさんの勝ち')\n"
+    "a(10)  # たて : 10，よこ : 10"
    ]
   },
   {
@@ -511,16 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1000回繰り返して，結果を数える\n",
-    "aw = 0   # Aさんが勝った回数\n",
-    "bw = 0   # Bさんが勝った回数\n",
-    "\n",
-    "for i in range(1000):  # 1000回繰り返す\n",
-    "    w = which()\n",
-    "    if w == 1:\n",
-    "        aw = aw + 1  # Aさんが勝った回数を1増やす\n",
-    "    if w == 2:\n",
-    "        bw = bw + 1  # Aさんが勝った回数を1増やす        "
+    "a(12)  # たて : 8，よこ : 12"
    ]
   },
   {
@@ -529,7 +446,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aw, bw    # 結果を表示"
+    "# たての長さを変えて，結果を保存\n",
+    "l = []   # 面積を保存する変数(リスト)\n",
+    "for i in range(1, 20):  # 1から19まで繰り返し\n",
+    "    r = a(i)\n",
+    "    l += [r]"
    ]
   },
   {
@@ -538,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bw/aw"
+    "plt.plot(range(1, 20), l)  # 面積の増減をグラフにする"
    ]
   },
   {
@@ -547,16 +468,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 100万回繰り返して，結果を数える\n",
-    "aw = 0   # Aさんが勝った回数\n",
-    "bw = 0   # Bさんが勝った回数\n",
-    "\n",
-    "for i in range(1000000):  # 100万回繰り返す\n",
-    "    w = which()\n",
-    "    if w == 1:\n",
-    "        aw = aw + 1  # Aさんが勝った回数を1増やす\n",
-    "    if w == 2:\n",
-    "        bw = bw + 1  # Aさんが勝った回数を1増やす        "
+    "# 山の頂上を確かめるため，増減を調べる\n",
+    "dl = []   # 増減を保存する変数(リスト)\n",
+    "for i in range(1, 19):  # 1から18まで繰り返し\n",
+    "    r1 = a(i) \n",
+    "    r2 = a(i+1) # +1の面積\n",
+    "    dl += [r2-r1]  #　増減を計算して保存"
    ]
   },
   {
@@ -565,7 +482,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aw, bw, bw/aw"
+    "import pandas as pd\n",
+    "pd.DataFrame([dl], columns=range(0, 18)) # 増減を表にして表示"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 細かく区切る\n",
+    "dl = []   # 増減を保存する変数(リスト)\n",
+    "delta = 0.1\n",
+    "for i in np.arange(1, 20, delta):\n",
+    "    r1 = a(i)\n",
+    "    r2 = a(i+delta)\n",
+    "    dl += [r2-r1]  #　増減を計算して保存"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame([dl], columns=np.arange(1, 20, delta)) # 増減を表にして表示"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# データが多いので，ちょうど差が0に近づくところだけを抜き出して表示\n",
+    "df.iloc[:, 85:105] "
    ]
   },
   {
