d，nとなっていた繰り返し変数をxに変更，微分のコードが間違っていたので修正(y=20-xをy=10-xに)

--- a/r00/Calculus.ipynb
+++ b/r00/Calculus.ipynb
@@ -241,8 +241,8 @@
     "# たくさん関数や数字を入力するのは大変なので，繰り返し(ループ)を使う\n",
     "import numpy as np\n",
     "\n",
-    "for d in np.arange(0, 2, 0.1):  # 0から2まで，0.1ずつ数字を増やしながら繰り返しを実行\n",
-    "    print(d)  # 増えて行く数字を表示する"
+    "for x in np.arange(0, 2, 0.1):  # 0から2まで，0.1ずつ数字を増やしながら繰り返しを実行\n",
+    "    print(x)  # 増えて行く数字を表示する"
    ]
   },
   {
@@ -253,8 +253,8 @@
    "source": [
     "# 台形を分割した長方形の高さを計算する(y = x+2)\n",
     "\n",
-    "for d in np.arange(0, 2, 0.1):\n",
-    "    y = d+2\n",
+    "for x in np.arange(0, 2, 0.1):\n",
+    "    y = x+2\n",
     "    print(y)  # 「たて」を表示"
    ]
   },
@@ -266,8 +266,8 @@
    "source": [
     "# 台形を分割した長方形の面積を合計する\n",
     "z = 0  # 面積の合計を足して行く変数\n",
-    "for n in np.arange(0, 2, 0.1):\n",
-    "    y = n+2\n",
+    "for x in np.arange(0, 2, 0.1):\n",
+    "    y = x+2\n",
     "    z = z + a(0.1, y) # 面積を計算，合計に足す"
    ]
   },
@@ -286,10 +286,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# さらにたくさん分割する(10000分割)\n",
+    "# さらにたくさん分割する(1万分割)\n",
     "z = 0  # 面積の合計を足して行く変数\n",
-    "for n in np.arange(0, 2, 0.0001):\n",
-    "    y = n+2\n",
+    "for x in np.arange(0, 2, 0.0001):\n",
+    "    y = x+2\n",
     "    z = z + a(0.0001, y) # 面積を計算，合計に足す"
    ]
   },
@@ -338,7 +338,7 @@
     "x=0を円の左端にし，円のたての長さ(w)を求めたい。\n",
     "\n",
     "$\n",
-    "w = \\sqrt{1 - (x-1)^2}\n",
+    "w = 2\\sqrt{1 - (x-1)^2}\n",
     "$"
    ]
   },
@@ -348,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 半径1の円の面積(10000分割)\n",
+    "# 半径1の円の面積(1万分割)\n",
     "\n",
     "z = 0  # 面積の合計を足して行く変数\n",
     "for x in np.arange(0, 2, 0.0001):\n",
@@ -393,11 +393,11 @@
    "outputs": [],
    "source": [
     "# たての長さが決まっているとき，横の長さが決まる\n",
-    "# たて : 12 よこ : 8\n",
+    "# たて : 4 よこ : 6\n",
     "# たての長さを決めれば面積が決まる\n",
     "\n",
-    "h = 12     # たての長さ\n",
-    "w = 20-h # よこの長さ\n",
+    "h = 4     # たての長さ\n",
+    "w = 10-h # よこの長さ\n",
     "h*w  # 面積"
    ]
   },
@@ -409,7 +409,7 @@
    "source": [
     "# たての長さを与えて面積を計算する関数を作る(面倒なので)\n",
     "def a(h):\n",
-    "    w = 20-h    # よこの長さ\n",
+    "    w = 10-h    # よこの長さ\n",
     "    return h*w # 面積を返す"
    ]
   },
@@ -419,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a(8)  # たて : 8， よこ 12"
+    "a(8)  # たて : 8， よこ 2"
    ]
   },
   {
@@ -428,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a(10)  # たて : 10，よこ : 10"
+    "a(5)  # たて : 5，よこ : 5"
    ]
   },
   {
@@ -437,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a(12)  # たて : 8，よこ : 12"
+    "a(2)  # たて : 2，よこ : 8"
    ]
   },
   {
@@ -448,7 +448,7 @@
    "source": [
     "# たての長さを変えて，結果を保存\n",
     "l = []   # 面積を保存する変数(リスト)\n",
-    "for i in range(1, 20):  # 1から19まで繰り返し\n",
+    "for i in range(1, 10):  # 1から9まで繰り返し\n",
     "    r = a(i)\n",
     "    l += [r]"
    ]
@@ -459,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(range(1, 20), l)  # 面積の増減をグラフにする"
+    "plt.plot(range(1, 10), l)  # 面積の増減をグラフにする"
    ]
   },
   {
@@ -470,7 +470,7 @@
    "source": [
     "# 山の頂上を確かめるため，増減を調べる\n",
     "dl = []   # 増減を保存する変数(リスト)\n",
-    "for i in range(1, 19):  # 1から18まで繰り返し\n",
+    "for i in range(0, 9):  # 0から8まで繰り返し\n",
     "    r1 = a(i) \n",
     "    r2 = a(i+1) # +1の面積\n",
     "    dl += [r2-r1]  #　増減を計算して保存"
@@ -483,7 +483,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "pd.DataFrame([dl], columns=range(0, 18)) # 増減を表にして表示"
+    "pd.DataFrame([dl], columns=range(0, 9)) # 増減を表にして表示"
    ]
   },
   {
@@ -495,7 +495,7 @@
     "# 細かく区切る\n",
     "dl = []   # 増減を保存する変数(リスト)\n",
     "delta = 0.1\n",
-    "for i in np.arange(1, 20, delta):\n",
+    "for i in np.arange(1, 10, delta):\n",
     "    r1 = a(i)\n",
     "    r2 = a(i+delta)\n",
     "    dl += [r2-r1]  #　増減を計算して保存"
@@ -507,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame([dl], columns=np.arange(1, 20, delta)) # 増減を表にして表示"
+    "df = pd.DataFrame([dl], columns=np.arange(1, 10, delta)) # 増減を表にして表示"
    ]
   },
   {
@@ -526,7 +526,7 @@
    "outputs": [],
    "source": [
     "# データが多いので，ちょうど差が0に近づくところだけを抜き出して表示\n",
-    "df.iloc[:, 85:105] "
+    "df.iloc[:, 30:45] "
    ]
   },
   {
